@@ -1,8 +1,8 @@
 Package: shipunov
 Type: Package
 Title: Miscellaneous Functions from Alexey Shipunov
-Version: 1.15
-Date: 2021-06-26
+Version: 1.16
+Date: 2021-08-22
 Author: Alexey Shipunov [aut, cre], Paul Murrell [ctb], Marcello D'Orazio [ctb], Stephen Turner [ctb], Eugeny Altshuler [ctb], Roland Rau [ctb], Marcus W Beck [ctb], Sebastian Gibb [ctb], Weiliang Qiu [ctb], Emmanuel Paradis [ctb], Roger Koenker [ctb], R Core Team [ctb]
 Maintainer: Alexey Shipunov <dactylorhiza@gmail.com>
 Description: A collection of functions for data manipulation, plotting and statistical computing,
@@ -23,6 +23,6 @@ License: GPL (>= 2)
 LazyLoad: yes
 LazyData: yes
 NeedsCompilation: no
-Packaged: 2021-06-25 23:05:25 UTC; alexey
+Packaged: 2021-08-22 14:18:22 UTC; alexey
 Repository: CRAN
-Date/Publication: 2021-06-26 05:00:02 UTC
+Date/Publication: 2021-08-22 14:40:02 UTC
